# BeatBay-backend

./: .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  alembic.ini  pyproject.toml  pytest.ini  run_app.sh
.github/workflows/: python-app.yml
docs/: DesignDoc.md
migrations/: env.py
migrations/versions/: 2024_01_07_0115-4ace0258a81e_.py  2024_01_07_2112-2fefab94d88c_.py  2024_01_07_2357-dba115ad5542_.py
src/app/: app.py
src/auth/: base_config.py  manager.py  models.py  schemas.py
src/beats/: models.py  router.py  schemas.py
src/config/: config.py
src/database/: database.py
src/users/: models.py  router.py  schemas.py
src/utils/: add_test_data.py
tests/: conftest.py  test_auth.py  test_example.py
